# Supply-Mind

./: .env.example  .gitignore  Dockerfile  HOW_THIS_SYSTEM_WORKS.md  HOW_TO_RUN.md  README.md  VERIFY_IT_WORKS.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  actions.py  audit_logger.py  context_builder.py  orchestrator.py  policy.py  scheduler.py
alembic/: env.py
alembic/versions/: b3f9d2e1a7c4_add_trigger_type_and_onboarding.py  c4a8b1d2e3f5_add_action_confidence_score.py  e5a793ec0653_add_backend_models.py  eaa53ea69e7b_initial_migration.py
api/: __init__.py  main.py
api/middleware/: auth.py  errors.py
api/models/: db.py  db_models.py
api/routes/: agent.py  auth.py  health.py  inventory.py  models.py  predictions.py  reports.py  scheduler.py  settings.py  (+1 more)
data/: settings.json
frontend-v2/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
models/: __init__.py
notebooks/: 01_m5_eda.py  02_supply_chain_eda.py  models_training_colab.ipynb
scripts/: download_datasets.py  drift_monitor.py  feature_engineering_demand.py  feature_engineering_supplier.py  find_backups.py  fix_notebook.py  fix_topbar.py  generate_synthetic_data.py  mlflow_promotion.py  precompute_data.py  run_agent_cycle.py  run_scheduler.py  seed_demo.py  smoke_test.py  smoke_test_predictions.py
simulation/: __init__.py  demand_generator.py  supplier_generator.py  supplier_sim.py
tests/: test_advanced_forecasting.py  test_api.py  test_backend.py  test_monotonicity.py  test_remediation.py
(+73 files in other folders)
