[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supplymind"
version = "0.1.0"
description = "Predictive Supply Chain Disruption Intelligence with Autonomous Mitigation Orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SupplyMind Team" }]
keywords = ["supply-chain", "machine-learning", "agentic-ai", "forecasting", "disruption-detection"]

[project.urls]
Repository = "https://github.com/your-org/supplymind"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", ".venv/*", "frontend/*", "notebooks/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
